# food_bot

./: .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
bot/: schemas.py  settings.py  utils.py
bot/databases/: alembic.ini  load_food.py  load_users.py
bot/databases/alembic/: env.py
bot/databases/alembic/versions/: 022951e9e9e3_.py  0ce18ceb3608_.py  6248a1a3445f_.py  f6b10bc366d3_.py
bot/databases/models/: __init__.py  base.py  food.py  order.py  user.py
bot/food_bot/: app.py  fsm.py  keyboards.py  middlewares.py  utils.py
deployment/: Dockerfile  pre_start.py  run.sh
python_project/: settings.py
python_project/databases/: __init__.py  alembic.ini
python_project/databases/alembic/: env.py
python_project/databases/alembic/versions/: 0ce18ceb3608_.py
python_project/databases/models/: user.py
python_project/project/: __main__.py
